MonetDB/src/mal/Tests/tst070.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## parsing operations with multi-assignments
#
#(x,y):= point(z:int);
#(initial:str,surname:str):= getName();
#
!ERROR: 'point' undefined in Admin.main[1]
!ERROR: 'getName' undefined in Admin.main[2]
function Admin.main():int;	#0:(main:int)
	(x,y):=point(z);	#1 unknown:(x:any)(y:any)<-(z:int)
	(initial,surname):=getName();	#2 unknown:(initial:str)(surname:str)
end function;	#3:
!ERROR: SyntaxError:Admin.main[0]:'Admin.main' contains errors
>